force-app/main/default/objects/Study_Participant__c/Study_Participant__c.object-meta.xml
<CustomObject>
    <label>Study Participant</label>
    <nameField>
        <label>Study Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Participants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>