force-app/main/default/objects/Study_Participant__c/fields/Address_City__c.field-meta.xml
<CustomField>
    <fullName>Address_City__c</fullName>
    <label>Address, City</label>
    <type>TextArea</type>
</CustomField>