force-app/main/default/objects/Study_Participant__c/fields/Informed_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Informed_Consent_Date__c</fullName>
    <label>Informed Consent Date</label>
    <type>Date</type>
</CustomField>