force-app/main/default/objects/Study_Participant__c/fields/Last_Checking__c.field-meta.xml
<CustomField>
    <fullName>Last_Checking__c</fullName>
    <label>Last Checking</label>
    <type>Date</type>
</CustomField>