force-app/main/default/objects/Study_Participant__c/fields/Last_PCT_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_PCT_Session__c</fullName>
    <label>Last PCT Session</label>
    <type>Date</type>
</CustomField>