force-app/main/default/objects/Study_Participant__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>TM_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>