force-app/main/default/objects/Study_Participant__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone #</label>
    <type>Phone</type>
</CustomField>