force-app/main/default/objects/Study_Participant__c/fields/Phone_Screen_Date__c.field-meta.xml
<CustomField>
    <fullName>Phone_Screen_Date__c</fullName>
    <label>Phone Screen Date</label>
    <type>Date</type>
</CustomField>