force-app/main/default/objects/Study_Participant__c/fields/Phone_Screen_Result__c.field-meta.xml
<CustomField>
    <fullName>Phone_Screen_Result__c</fullName>
    <label>Phone Screen Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>