force-app/main/default/objects/Study_Participant__c/fields/Post_Survey_Clinician_3__c.field-meta.xml
<CustomField>
    <fullName>Post_Survey_Clinician_3__c</fullName>
    <label>Post-Survey Clinician #3</label>
    <type>Date</type>
</CustomField>