force-app/main/default/objects/Study_Participant__c/fields/Post_Survey_Self_1__c.field-meta.xml
<CustomField>
    <fullName>Post_Survey_Self_1__c</fullName>
    <label>Post-Survey Self #1</label>
    <type>Date</type>
</CustomField>