force-app/main/default/objects/Study_Participant__c/fields/Pre_Survey_Clinician__c.field-meta.xml
<CustomField>
    <fullName>Pre_Survey_Clinician__c</fullName>
    <label>Pre-Survey Clinician</label>
    <type>Date</type>
</CustomField>