force-app/main/default/objects/Study_Participant__c/fields/Pre_Survey_Self__c.field-meta.xml
<CustomField>
    <fullName>Pre_Survey_Self__c</fullName>
    <label>Pre-Survey Self</label>
    <type>Date</type>
</CustomField>