force-app/main/default/objects/Study_Participant__c/fields/Randomization_Date__c.field-meta.xml
<CustomField>
    <fullName>Randomization_Date__c</fullName>
    <label>Randomization Date</label>
    <type>Date</type>
</CustomField>