force-app/main/default/objects/Study_Participant__c/fields/Reason_Denied__c.field-meta.xml
<CustomField>
    <fullName>Reason_Denied__c</fullName>
    <label>Reason Denied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>