force-app/main/default/objects/Study_Participant__c/fields/Referral_Track__c.field-meta.xml
<CustomField>
    <fullName>Referral_Track__c</fullName>
    <label>Referral Track</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within VA</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>