force-app/main/default/objects/Study_Participant__c/fields/Site_Depricate__c.field-meta.xml
<CustomField>
    <fullName>Site_Depricate__c</fullName>
    <formula>Name__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site-Depricate</label>
    <type>Text</type>
</CustomField>