force-app/main/default/objects/Study_Participant__c/fields/Study_Site__c.field-meta.xml
<CustomField>
    <fullName>Study_Site__c</fullName>
    <label>Study Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boston VA</fullName>
            </value>
            <value>
                <fullName>Bronx VA</fullName>
            </value>
            <value>
                <fullName>DC VA</fullName>
            </value>
            <value>
                <fullName>Denver VA</fullName>
            </value>
            <value>
                <fullName>Palo Alto VA</fullName>
            </value>
            <value>
                <fullName>San Diego VA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>