force-app/main/default/objects/Study_Participant__c/fields/Subject_Notes__c.field-meta.xml
<CustomField>
    <fullName>Subject_Notes__c</fullName>
    <inlineHelpText>Put most recent note at the beginning.  Include date on note: 9/4/22-left voicemail that we need to reschedule.  9/1/22-texted to remind him of session.</inlineHelpText>
    <label>Subject Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>