force-app/main/default/objects/Study_Participant__c/fields/Subject_Type__c.field-meta.xml
<CustomField>
    <fullName>Subject_Type__c</fullName>
    <label>Subject Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TM</fullName>
            </value>
            <value>
                <fullName>PCT</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>