force-app/main/default/objects/Study_Participant__c/fields/TM_Inst_Date__c.field-meta.xml
<CustomField>
    <fullName>TM_Inst_Date__c</fullName>
    <label>TM Inst. Date</label>
    <type>Date</type>
</CustomField>