force-app/main/default/objects/Study_Participant__c/fields/TM_Intro_Date__c.field-meta.xml
<CustomField>
    <fullName>TM_Intro_Date__c</fullName>
    <label>TM Intro Date</label>
    <type>Date</type>
</CustomField>