force-app/main/default/objects/Study_Participant__c/fields/Total_PCT_Boosters__c.field-meta.xml
<CustomField>
    <fullName>Total_PCT_Boosters__c</fullName>
    <label>Total PCT Boosters</label>
    <summaryFilterItems>
        <field>TM_Session__c.Session_Type__c</field>
        <operation>equals</operation>
        <value>PCT</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>TM_Session__c.Session_Subtype__c</field>
        <operation>equals</operation>
        <value>PCT Booster</value>
    </summaryFilterItems>
    <summaryForeignKey>TM_Session__c.Subject__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>