force-app/main/default/objects/Study_Participant__c/fields/Total_TM_Checkings__c.field-meta.xml
<CustomField>
    <fullName>Total_TM_Checkings__c</fullName>
    <label>Total TM Checkings</label>
    <summaryFilterItems>
        <field>TM_Session__c.Session_Type__c</field>
        <operation>equals</operation>
        <value>TM</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>TM_Session__c.Session_Subtype__c</field>
        <operation>equals</operation>
        <value>TM Intro, TM Instruction, Day 1 Checking, Day 2 Checking, Day 3 Checking, 10 Day Check, Checking</value>
    </summaryFilterItems>
    <summaryForeignKey>TM_Session__c.Subject__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>