force-app/main/default/objects/Study_Participant__c/fields/X1st_PCT_session__c.field-meta.xml
<CustomField>
    <fullName>X1st_PCT_session__c</fullName>
    <label>1st PCT session</label>
    <type>Date</type>
</CustomField>