force-app/main/default/objects/Study_Participant__c/recordTypes/PCT_Subject.recordType-meta.xml
<RecordType>
    <fullName>PCT_Subject</fullName>
    <active>true</active>
    <label>PCT Subject</label>
</RecordType>