force-app/main/default/objects/Study_Participant__c/recordTypes/PCT_Supervisor.recordType-meta.xml
<RecordType>
    <fullName>PCT_Supervisor</fullName>
    <active>true</active>
    <label>PCT Supervisor</label>
</RecordType>