force-app/main/default/objects/Study_Participant__c/recordTypes/PCT_Therapist.recordType-meta.xml
<RecordType>
    <fullName>PCT_Therapist</fullName>
    <active>true</active>
    <label>PCT Therapist</label>
</RecordType>