force-app/main/default/objects/Study_Participant__c/recordTypes/TM_Subject.recordType-meta.xml
<RecordType>
    <fullName>TM_Subject</fullName>
    <active>true</active>
    <label>TM Subject</label>
</RecordType>