force-app/main/default/objects/Study_Participant__c/recordTypes/TM_Teacher.recordType-meta.xml
<RecordType>
    <fullName>TM_Teacher</fullName>
    <active>true</active>
    <label>TM Teacher</label>
</RecordType>